@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Set the term size for all tests that use tables
+
 0.000067  2017-01-03 19:41:52-08:00 America/Los_Angeles
 
     - No changes
